2006-06-14  Richard Frith-Macdonald <rfm@gnu.org>

	* common.make: determine host/target info before trying to load
	host/target specific configuration.

2006-05-01  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Change --with... options specifying paths so that if
	someone oddly uses --without... we treat it as if they had specified
	nothing.

2006-04-26  Adam Fedor  <fedor@gnu.org>

	* Documentation/gnustep-howto.texi: Fix node link

2006-04-26  Saso Kiselkov

	* common.make: Add option to turn on native exceptions.

2006-04-25  Adam Fedor  <fedor@gnu.org>

	* Documentation/gnustep-howto.texi: Update windowmaker address

2006-04-07  Adam Fedor  <fedor@gnu.org>

	* Documentation/README.MinGW: Correct typo in xml instructions.

2006-04-06  Adam Fedor  <fedor@gnu.org>

	* config.make.in: Set GNUSTEP_HOME to $(HOME). Fix if statements
	with filter in them. Fixes bug #16010.

2006-03-27  Adam Fedor  <fedor@gnu.org>

	* target.make (openbsd): Add additional link flags for bundle
	loading. Patch #4989 from Andrew Sveikauskas.

2006-03-27  Adam Fedor  <fedor@gnu.org>

	* Master/source-distribution.make (svn-tag): Add comment line
	(svn-dist): Simplify checkout.
	* Master/framework.make: Add build-headers rules
	* GNUmakefile: Add special_prefix to GNUSTEP_MAKEFILES

2006-03-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/README.MinGW: Attempt to clarify versions to be used.

2006-03-13  Adam Fedor  <fedor@gnu.org>

	* Version 1.12.0

2006-03-09  Adam Fedor  <fedor@gnu.org>

	* target.make (openbsd): Add specific EXTACT_CLASS_NAMES_COMMAND.
	Patch #4957 from Andrew Sveikauskas.

2006-03-07  Jeremy Bettis  <jeremy@deadbeef.com>

	* Instance/framework.make: Only copy headers if they changed.
	Delete framework.dll if the compile fails.
	
	* Instance/subproject.make: Only copy headers if they changed
	
	* Master/framework.make: make
	$(FRAMEWORK_NAME:=.all.framework.variables) depend on
	$(FRAMEWORK_NAME:=.build-headers.framework.variables), sometimes